Run the JSON-B TCK with COMPAT locale data and drop the locale exclusions